# Neurobotika

./: .dockerignore  .gitignore  README.md  plan.html  pyproject.toml  requirements.txt
data/: README.md
docker/: brain.Dockerfile  build-and-push.sh  build-on-codebuild.sh  download.Dockerfile  postproc.Dockerfile  spine.Dockerfile  training.Dockerfile
docs/: architecture.md  cloud-pipeline.md  datasets.md  decisions.md  deployment.md  manual-segmentation-guide.md  microstructure-generation.md  openusd-compatibility.md  pipeline-overview.md  unity-viewer.md
infra/: .env.example  README.md  check-quotas.sh  env-to-tfvars.sh  main.tf  outputs.tf  variables.tf
pipeline/: README.md
pipeline/01_data_acquisition/: README.md  download_lumbosacral.sh  download_lusebrink_2021.sh  download_mgh_100um.sh  download_spine_generic.sh  run_downloads.sh  verify_downloads.py
pipeline/02_brain_segmentation/: README.md  extract_csf_labels.py  resample_volume.py  run_brainseg.py  run_synthseg.py
pipeline/03_spine_segmentation/: README.md  compute_spinal_sas.py  run_sct_pipeline.sh  run_spineseg.py  run_totalspineseg.py
pipeline/04_manual_refinement/: README.md  push_merged.py  (+1 more)
scripts/: README.md  run_full_pipeline.sh  setup_environment.sh
tests/: README.md  conftest.py  test_compute_spinal_sas.py  test_export_unity.py  test_extract_csf_labels.py  test_join_craniospinal.py  test_label_consistency.py  test_prepare_nnunet.py  test_resample_volume.py  test_run_downloads.py  test_validate_labels.py  test_verify_downloads.py
unity/: README.md
web/: README.md  index.html
(+34 files in other folders)
